FSAR-27: Text block amends - Remove margin from bottom of h tags and add to the top - Resize bullets and fix split line issue - Add extra spacing to the external link

--- a/src/components/form/ExternalLink/externalLink.scss
+++ b/src/components/form/ExternalLink/externalLink.scss
@@ -3,6 +3,7 @@
 .external-link {
   @include link;
   padding-right: 1.25rem;
+  margin-right: 0.25rem;
   position: relative;
   &::after {
     content: "";
